<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bluetoothDevicesContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/bluetoothDevicesTitle"
            style="@style/Text.Heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp"
            android:text="@string/settings_bluetooth_select_device"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Small"
            android:id="@+id/progressScanning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/bluetoothDevicesTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/bluetoothDevicesTitle"
            android:paddingHorizontal="12dp"
            />

        <ImageButton
            android:id="@+id/btnRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_refresh_24"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/bluetoothDevicesTitle"
            android:tint="?colorControlNormal"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listDevices"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bluetoothDevicesTitle"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="5"
            tools:listitem="@layout/item_bluetooth_device" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/permissionWarningContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/bluetoothPermissionWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            style="@style/Text.Heading2"
            android:textColor="?colorError"
            android:text="@string/settings_bluetooth_permission_warning"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:paddingBottom="12dp"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/btnGrantBtPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_grant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bluetoothPermissionWarning"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>