<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:custom="http://schemas.android.com/com.sygic.driving.testapp.view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layoutContainer"
        tools:context=".ui.realtime.RealtimeFragment">

    <TextView
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorError"
        android:padding="10dp"
        android:textColor="@android:color/background_light"
        android:visibility="gone"
        tools:text="Driving not initialized" />

    <ImageView
        android:id="@+id/imgBluetoothIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_bluetooth_connected_24"
        android:padding="20dp"
        android:alpha="0.3"
        />

    <RelativeLayout
        android:id="@+id/warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/error"
        android:background="?attr/colorWarning"
        android:visibility="gone"
        >

        <Button
            android:id="@+id/btnGrant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/button_grant"
            android:layout_margin="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/btnGrant"
            android:maxLines="3"
            android:padding="10dp"
            android:text="@string/realtime_bg_permission_warning_text"
            android:textColor="@android:color/background_light" />

    </RelativeLayout>



    <Button
            android:text="@string/realtime_button_start_trip"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnStartTrip"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
    />
    <Button
            android:text="@string/realtime_button_end_trip"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/btnStartTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:id="@+id/btnEndTrip"
        />

    <Button
            android:text="@string/realtime_button_stop_simulation"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:id="@+id/btnStopSimulation"
        />

    <TextView
        android:id="@+id/tvIsInTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/warning"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:textSize="20sp"
        tools:text="IS IN TRIP" />

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:layout_above="@+id/btnStartTrip"
            android:stretchColumns="0,1,2"
            android:layout_margin="@dimen/default_margin"
            >

        <TableRow>

            <com.sygic.driving.testapp.ui.common.LiveValueView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/liveStartTime"
                    android:layout_gravity="center_horizontal"
                    />

            <com.sygic.driving.testapp.ui.common.LiveValueView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/liveDistance"
                    android:layout_gravity="center_horizontal"
                    custom:description="Distance"
                    />


            <com.sygic.driving.testapp.ui.common.LiveValueView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/liveDuration"
                android:layout_gravity="center_horizontal"
                custom:description="Duration"
                />

        </TableRow>

        <TableRow>

            <com.sygic.driving.testapp.ui.common.LiveValueView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/liveSpeed"
                android:layout_gravity="center_horizontal"
                custom:description="Speed"
                />

            <com.sygic.driving.testapp.ui.common.LiveValueView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/liveAltitude"
                android:layout_gravity="center_horizontal"
                custom:description="Altitude"
                />

            <com.sygic.driving.testapp.ui.common.LiveValueView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/liveRpm"
                android:layout_gravity="center_horizontal"
                custom:description="RPM"
                />

        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/tvAngle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvIsInTrip"
        android:layout_centerHorizontal="true"
        tools:text="50.0"
        android:textSize="20sp" />

    <GridLayout android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="5"
                android:rowCount="2"
                android:layout_below="@id/tvAngle"
                android:layout_centerHorizontal="true"
    >
        <TextView
                android:id="@+id/tvTitleA"
                android:text="A"
                android:textSize="@dimen/size_rt_big_char"
                android:layout_width="70dp"
                android:gravity="center"
                android:alpha="0.5"
        />
        <TextView
                android:id="@+id/tvTitleB"
                android:text="B"
                android:textSize="@dimen/size_rt_big_char"
                android:layout_width="70dp"
                android:gravity="center"
                android:alpha="0.5"
        />
        <TextView
                android:id="@+id/tvTitleC"
                android:text="C"
                android:textSize="@dimen/size_rt_big_char"
                android:layout_width="70dp"
                android:gravity="center"
                android:alpha="0.5"
            />
        <TextView
                android:id="@+id/tvTitleD"
                android:text="D"
                android:textSize="@dimen/size_rt_big_char"
                android:layout_width="70dp"
                android:gravity="center"
                android:alpha="0.5"
            />
        <TextView
                android:id="@+id/tvTitleH"
                android:text="H"
                android:textSize="@dimen/size_rt_big_char"
                android:layout_width="70dp"
                android:gravity="center"
                android:alpha="0.5"
            />

        <TextView
                android:id="@+id/tvA"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_margin="@dimen/default_margin"
        />

        <TextView
                android:id="@+id/tvB"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_margin="@dimen/default_margin"
        />

        <TextView
                android:id="@+id/tvC"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_margin="@dimen/default_margin"
        />

        <TextView
                android:id="@+id/tvD"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_margin="@dimen/default_margin"
        />

        <TextView
                android:id="@+id/tvH"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_margin="@dimen/default_margin"
        />

    </GridLayout>


</RelativeLayout>